Kubernetes/Portainer/yamls/ig-portainer.yaml
#apiVersion: traefik.io/v1alpha1
#kind: Middleware
#metadata:
#  name: portainer-traefik-https-redirect
#  namespace: portainer
#spec:
#  redirectScheme:
#    scheme: https
#    permanent: true
#---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: portainer-traefik-security
  namespace: portainer
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portainer-traefik-websecure
  namespace: portainer
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`portainer.domain.com`)
      services:
      - name: portainer
        port: 9443
        serversTransport: portainer-traefik-transport
      middlewares:
        - name: portainer-traefik-security
  tls:
    secretName: portainer-domain-com
    options:
      name: portainer-traefik-tlsoptions
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portainer-traefik-web
  namespace: portainer
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`portainer.domain.com`)
      services:
      - name: portainer
        port: 9443
#      middlewares:
#        - name: portainer-traefik-https-redirect
