Kubernetes/Portainer/yamls/portainer-traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: portainer-dashboard-https-redirect
  namespace: portainer
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: portainer-dashboard-security
  namespace: portainer
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: portainer-dashboard-websecure
  namespace: portainer
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`portainer.urbaman.it`)
      services:
      - name: portainer
        port: 9443
        serversTransport: portainer-dashboard-transport
      middlewares:
        - name: portainer-dashboard-security
  tls:
    secretName: portainer-urbaman
    options:
      name: portainer-dashboard-tlsoptions
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: portainer-dashboard-web
  namespace: portainer
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`portainer.urbaman.it`)
      services:
      - name: portainer
        port: 9443
      middlewares:
        - name: portainer-dashboard-https-redirect
